--- a/src/index.css
+++ b/src/index.css
@@ -33,14 +33,15 @@ background:#DC4343;
 
 body{
  
-  
-  background-color: #1F1E24;
-  overflow-x: hidden;
+  background-color: black;
+  /* background-color: #1F1E24; */
+ 
+
 }
 
  
 
-/* Custom select wrapper */
+
  
 
 /* Styling the select element */
@@ -71,11 +72,13 @@ html {
 
  
 .bg-custom-gradient {
-  background:
+  /* background:
     linear-gradient(135deg, #0f172a 0%, #1e293b 40%, #0f172a 100%),
     radial-gradient(600px 400px at 20% 30%, rgba(255, 255, 255, 0.05), transparent 70%),
     radial-gradient(800px 500px at 80% 70%, rgba(59,130,246,0.08), transparent 60%),
-    radial-gradient(1000px 600px at 50% 120%, rgba(236,72,153,0.08), transparent 60%);
+    radial-gradient(1000px 600px at 50% 120%, rgba(236,72,153,0.08), transparent 60%); */
+
+    background-color: black;
 }
 
 
