--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,12 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+html {
+  scroll-behavior: smooth;
+}
+
+
 html,body{
   width: 100%;
   height: 100%;
@@ -32,11 +38,7 @@ background:#DC4343;
 }
 
 body{
- 
-  background-color: black;
-  /* background-color: #1F1E24; */
- 
-
+  background-color: #1F1E24;
 }
 
  
@@ -64,22 +66,9 @@ body{
  
 
  
-html {
-  scroll-behavior: smooth;
-}
-
 
 
  
-.bg-custom-gradient {
-  /* background:
-    linear-gradient(135deg, #0f172a 0%, #1e293b 40%, #0f172a 100%),
-    radial-gradient(600px 400px at 20% 30%, rgba(255, 255, 255, 0.05), transparent 70%),
-    radial-gradient(800px 500px at 80% 70%, rgba(59,130,246,0.08), transparent 60%),
-    radial-gradient(1000px 600px at 50% 120%, rgba(236,72,153,0.08), transparent 60%); */
-
-    background-color: black;
-}
 
 
 
